[package]
name = "delaunator"
version = "1.0.2"
edition = "2018"
description = "A very fast 2D Delaunay triangulation library."
documentation = "https://docs.rs/delaunator"
repository = "https://github.com/mourner/delaunator-rs"
readme = "README.md"
license = "ISC"
categories = ["algorithms", "data-structures"]
keywords = ["delaunay", "triangulation", "tessellation", "spatial", "geometry"]
authors = ["Vladimir Agafonkin <agafonkin@gmail.com>"]

[dependencies]
robust = "1.2.0"

[dev-dependencies]
criterion = "0.6.0"
rand = "0.9.2"
serde_json = "1.0.132"

[features]
default = ["std"]
std = []

[lib]
bench = false

[[bench]]
name = "bench"
harness = false

[[example]]
name = "triangulate"
path = "examples/triangulate.rs"

[[example]]
name = "svg"
path = "examples/svg.rs"
